_2008_04_18__11_28_41_ Ch-Hsiu Liang

  * Input the units of concentration by a string instead of meaningless number
  * removed some debugflags

2008-4-18 David Glowacki

  * moved subsidiary reactant 2 from reaction.h to the derived classes association and exchange
  * change ActivationEnergy to ThresholdEnergy

2008-4-18 David Glowacki

  * moved subsidiary product 2 from reaction.h to the derived classes dissociation and exchange

_2008_04_18__09_28_31_ Chi-Hsiu Liang

Change back MesmerHP to double in dMatrix.h

2008-4-17 David Glowacki

  * created pure virtual methods in reaction.h for describing detailed balance in association, isomerization, exchange, and dissociation reactions
  * updated baselines for HSO2 & cyclopropene
  * replace max grain size variable to use member data m_ncolloptrsize in collidingmolecule

2008-4-17 David Glowacki

  * corrected collision operator initialization routine
  * added cyclopropene baseline + input file

2008_04_17__11_44_02_ Chi-Hsiu Liang

  * Updated baseline for association reaction
  * review of association equilibrium constant


2008-4-17 David Glowacki

  * EckartCoefficients.cpp:  add comments to clarify.

2008-1-27 Struan Robertson

  * Reaction.h:  Declare methods InitializeReaction and calcEquilibriumConstant 
  pure virtual, and associated changes.

2008-1-27 Struan Robertson

  * Reaction.h:  Move all public data to protected data, and concomitant changes.

_2008_04_04__14_25_39_ Chi-Hsiu Liang

  * renamed grnDensityOfStates() -> getGrainDensityOfStates()
  * Changed detailed balance on the cell level to the grain level
  * Corrected codes where DOS and rate coefficients are not referenced to the well bottom.
  * EAboveWell renamed to EAboveHill to reflect that this energy value is above the highest hilltop 
    but not the highest well bottom
  * Code for setting grain ZPE of all speices
  * Corrected getClassicalEnergy()
  * rename grnAvg() -> rateConstantGrnAvg()